Linter: Rename `Shared` to `Ui`;

--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/Home.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/Home.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@using DnDCharCtor.Shared.Services
+@using DnDCharCtor.Ui.Services
 @inject IFormFactor FormFactor
 
 <PageTitle>Home</PageTitle>
