--- a/DnDCharCtor/DnDCharCtor.Maui/MainPage.xaml
+++ b/DnDCharCtor/DnDCharCtor.Maui/MainPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:DnDCharCtor.Maui"
-             xmlns:shared="clr-namespace:DnDCharCtor.Shared;assembly=DnDCharCtor.Shared"
+             xmlns:shared="clr-namespace:DnDCharCtor.Ui;assembly=DnDCharCtor.Ui"
              x:Class="DnDCharCtor.Maui.MainPage"
              BackgroundColor="{DynamicResource PageBackgroundColor}">
 
