Linter: Rename `FormFactor` to `PlatformServicve`;

--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/Home.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/Home.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 @using DnDCharCtor.Ui.Services
-@inject IFormFactor FormFactor
+@inject IPlatformService FormFactor
 
 <PageTitle>Home</PageTitle>
 
