--- a/DnDCharCtor/DnDCharCtor.Ui/Layout/NavMenu.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Layout/NavMenu.razor
@@ -14,17 +14,15 @@
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
+        @if (_currentCharacter is { Personality: { } })
+        {
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="@Routes.CurrentCharacter">
+                    <span class="bi bi-person-fill" aria-hidden="true"></span> @_currentCharacter.Personality.CharacterName
+                </NavLink>
+            </div>
+        }
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
     </nav>
 </div>
 
