--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/Home.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/Home.razor
@@ -1,14 +1,6 @@
 ﻿@page "/"
-@using DnDCharCtor.Ui.Services
-@inject IPlatformService FormFactor
+@inject IPlatformService PlatformService
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
 
-Welcome to your new app running on <em>@factor</em> using <em>@platform</em>.
-
-@code {
-    private string factor => FormFactor.GetFormFactor();
-    private string platform => FormFactor.GetPlatform();
-}
