--- a/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
@@ -1,8 +1,22 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using System.Linq
+@using System.Linq.Expressions
+
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+
+@using Microsoft.Fast.Components.FluentUI
+
+@using DnDCharCtor.Common.Services
+@using DnDCharCtor.Common.Constants
+
+@using DnDCharCtor.Ui.Constants
+
+@using DnDCharCtor.ViewModels
+@using DnDCharCtor.ViewModels.ModelViewModels
+
