--- a/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
@@ -15,6 +15,8 @@
 @using DnDCharCtor.Common.Services
 @using DnDCharCtor.Common.Constants
 
+@using DnDCharCtor.Models
+
 @using DnDCharCtor.Ui.Constants
 
 @using DnDCharCtor.ViewModels
