--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/Home.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/Home.razor
@@ -1,6 +1,12 @@
 ﻿@page "/"
-@inject IPlatformService PlatformService
+@inject IHybridCacheService HybridCacheService
+@inject INavigationService 
 
 <PageTitle>Home</PageTitle>
 
+@code {
+    protected override async Task OnInitializedAsync()
+    {
 
+    }
+}
