--- a/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
@@ -12,11 +12,12 @@
 
 @using Microsoft.Fast.Components.FluentUI
 
-@using DnDCharCtor.Common.Services
 @using DnDCharCtor.Common.Constants
+@using DnDCharCtor.Common.Services
 
 @using DnDCharCtor.Models
 
+@using DnDCharCtor.Ui.Components.Dialogs
 @using DnDCharCtor.Ui.Constants
 
 @using DnDCharCtor.ViewModels
