Fix: UI should NOT use Models - it should use ViewModels which can use Models;

--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/EditCharacter.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/EditCharacter.razor
@@ -5,20 +5,8 @@
 
 <CascadingValue Name="@CascadeValueNames.DataContext" Value="@ViewModel">
 
-
+    <PersonalityCard />
 
     <FluentButton OnClick="SaveChanges">Save</FluentButton>
 
 </CascadingValue>
-
-@code {
-    
-    private async Task SaveChanges()
-    {
-        // Trigger validation and save logic here
-        // Validate all characters and show errors if any
-    }
-}
-
-
-
