--- a/DnDCharCtor/DnDCharCtor.Ui/Layout/MainLayout.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Layout/MainLayout.razor
@@ -5,7 +5,7 @@
 <CascadingValue Name="@CascadeValueNames.DataContext" Value="@ViewModel">
     <div class="page">
     <div class="sidebar">
-        <NavMenu CurrentCharacterExpression="@(() => ViewModel.CurrentCharacter)" />
+        <NavMenu CurrentCharacterExpression="@(() => ViewModel.CurrentCharacterViewModel)" />
     </div>
 
     <main>
