--- a/DnDCharCtor/DnDCharCtor.Ui/Layout/NavMenu.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Layout/NavMenu.razor
@@ -14,11 +14,11 @@
             </NavLink>
         </div>
 
-        @if (_currentCharacter is { Personality: { } })
+        @if (string.IsNullOrWhiteSpace(_currentCharacterViewModel?.PersonalityViewModel?.CharacterName) is false)
         {
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="@Routes.CurrentCharacter">
-                    <span class="bi bi-person-fill" aria-hidden="true"></span> @_currentCharacter.Personality.CharacterName
+                    <span class="bi bi-person-fill" aria-hidden="true"></span> @_currentCharacterViewModel.PersonalityViewModel.CharacterName
                 </NavLink>
             </div>
         }
