--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/Home.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/Home.razor
@@ -1,12 +1,6 @@
 ﻿@page "/"
+
 @inject IHybridCacheService HybridCacheService
-@inject INavigationService 
+@inject NavigationManager NavigationManager
 
 <PageTitle>Home</PageTitle>
-
-@code {
-    protected override async Task OnInitializedAsync()
-    {
-
-    }
-}
