--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/EditCharacter.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/EditCharacter.razor
@@ -5,7 +5,7 @@
 
 <CascadingValue Name="@CascadeValueNames.DataContext" Value="@ViewModel">
 
-    <PersonalityCard />
+    <PersonalityCard PersonalityExpression="@(() => ViewModel.EditCharacterViewModel.PersonalityViewModel)" />
 
     <FluentButton OnClick="SaveChanges">Save</FluentButton>
 
