--- a/DnDCharCtor/DnDCharCtor.Ui/Layout/MainLayout.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Layout/MainLayout.razor
@@ -13,7 +13,8 @@
             @Body
         </article>
 
-            <FluentDialogProvider />
+        <FluentDialogProvider />
+        <FluentTooltipProvider />
     </main>
 </div>
 </CascadingValue>
