Fix: Page-Routes;

--- a/DnDCharCtor/DnDCharCtor.Ui/Pages/EditCharacter.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Pages/EditCharacter.razor
@@ -1,4 +1,5 @@
-﻿@page "/editCharacter/{id}"
+﻿@attribute [Route(Routes.EditCharacter)]
+@page "/editCharacter/{id}"
 
 @inject EditCharacterViewModel ViewModel
 @inject IHybridCacheService HybridCacheService
