WIP: Try to fix Second Dialog;

--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/EditPersonalityDialog.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/EditPersonalityDialog.razor
@@ -1,7 +1,7 @@
 ﻿@implements IDialogContentComponent<PersonalityViewModel>
 
 <FluentDialog>
-    <FluentDialogHeader ShowDismiss="true">
+    <FluentDialogHeader>
         <FluentStack VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center">
             <FluentLabel Typo="Typography.PaneHeader">
                 @Dialog.Instance.Parameters.Title
