--- a/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
@@ -12,7 +12,7 @@
 
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 
-@using Microsoft.Fast.Components.FluentUI
+@using Microsoft.FluentUI.AspNetCore.Components
 
 @using DnDCharCtor.Common.Constants
 @using DnDCharCtor.Common.Services
