--- a/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/EditPersonalityDialog.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/Components/Dialogs/EditPersonalityDialog.razor
@@ -1,5 +1,7 @@
 ﻿@implements IDialogContentComponent<PersonalityViewModel>
 
+@inject IServiceProvider ServiceProvider
+
 <FluentDialogHeader>
     <FluentStack VerticalAlignment="VerticalAlignment.Center" HorizontalAlignment="HorizontalAlignment.Center">
         <FluentLabel Typo="Typography.PaneHeader">
