--- a/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
+++ b/DnDCharCtor/DnDCharCtor.Ui/_Imports.razor
@@ -19,6 +19,7 @@
 
 @using DnDCharCtor.Models
 
+@using DnDCharCtor.Ui.Components
 @using DnDCharCtor.Ui.Components.Cards
 @using DnDCharCtor.Ui.Components.Dialogs
 @using DnDCharCtor.Ui.Constants
